src/styles/global.css
@import "tailwindcss";

@variant theme-main (&:where([data-theme="main"] *));
@variant theme-moon (&:where([data-theme="moon"] *));
@variant theme-dawn (&:where([data-theme="dawn"] *));

@custom-variant pointer-coarse (@media (pointer: coarse));

@theme {
	--breakpoint-wrapper: 80rem;

	--font-sans:
		ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
		"Segoe UI Symbol", "Noto Color Emoji";
	--font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;

	--spacing-page-top: 3rem;
	--spacing-page-gutter: 2rem;
	--spacing-page-gutter-half: calc(var(--spacing-page-gutter) / 2);

	--color-main-base: #191724;
	--color-main-surface: #1f1d2e;
	--color-main-overlay: #26233a;
	--color-main-muted: #6e6a86;
	--color-main-subtle: #908caa;
	--color-main-text: #e0def4;
	--color-main-love: #eb6f92;
	--color-main-gold: #f6c177;
	--color-main-rose: #ebbcba;
	--color-main-pine: #31748f;
	--color-main-foam: #9ccfd8;
	--color-main-iris: #c4a7e7;

	--color-moon-base: #232136;
	--color-moon-surface: #2a273f;
	--color-moon-overlay: #393552;
	--color-moon-muted: #6e6a86;
	--color-moon-subtle: #908caa;
	--color-moon-text: #e0def4;
	--color-moon-love: #eb6f92;
	--color-moon-gold: #f6c177;
	--color-moon-rose: #ea9a97;
	--color-moon-pine: #3e8fb0;
	--color-moon-foam: #9ccfd8;
	--color-moon-iris: #c4a7e7;

	--color-dawn-base: #faf4ed;
	--color-dawn-surface: #fffaf3;
	--color-dawn-overlay: #f2e9e1;
	--color-dawn-muted: #9893a5;
	--color-dawn-subtle: #797593;
	--color-dawn-text: #464261;
	--color-dawn-love: #b4637a;
	--color-dawn-gold: #ea9d34;
	--color-dawn-rose: #d7827e;
	--color-dawn-pine: #286983;
	--color-dawn-foam: #56949f;
	--color-dawn-iris: #907aa9;

	--color-base: var(--color-dawn-base);
	--color-surface: var(--color-dawn-surface);
	--color-overlay: var(--color-dawn-overlay);
	--color-muted: var(--color-dawn-muted);
	--color-subtle: var(--color-dawn-subtle);
	--color-text: var(--color-dawn-text);
	--color-love: var(--color-dawn-love);
	--color-gold: var(--color-dawn-gold);
	--color-rose: var(--color-dawn-rose);
	--color-pine: var(--color-dawn-pine);
	--color-foam: var(--color-dawn-foam);
	--color-iris: var(--color-dawn-iris);
}

:root {
	color-scheme: light dark;

	@media (width >= theme(--breakpoint-sm)) {
		--spacing-page-top: 4rem;
	}

	@media (width >= theme(--breakpoint-md)) {
		--spacing-page-gutter: 3rem;
	}

	@media (prefers-color-scheme: dark) {
		--color-base: var(--color-main-base);
		--color-surface: var(--color-main-surface);
		--color-overlay: var(--color-main-overlay);
		--color-muted: var(--color-main-muted);
		--color-subtle: var(--color-main-subtle);
		--color-text: var(--color-main-text);
		--color-love: var(--color-main-love);
		--color-gold: var(--color-main-gold);
		--color-rose: var(--color-main-rose);
		--color-pine: var(--color-main-pine);
		--color-foam: var(--color-main-foam);
		--color-iris: var(--color-main-iris);
	}

	&[data-theme="main"] {
		color-scheme: dark;

		--color-base: var(--color-main-base);
		--color-surface: var(--color-main-surface);
		--color-overlay: var(--color-main-overlay);
		--color-muted: var(--color-main-muted);
		--color-subtle: var(--color-main-subtle);
		--color-text: var(--color-main-text);
		--color-love: var(--color-main-love);
		--color-gold: var(--color-main-gold);
		--color-rose: var(--color-main-rose);
		--color-pine: var(--color-main-pine);
		--color-foam: var(--color-main-foam);
		--color-iris: var(--color-main-iris);
	}

	&[data-theme="moon"] {
		color-scheme: dark;

		--color-base: var(--color-moon-base);
		--color-surface: var(--color-moon-surface);
		--color-overlay: var(--color-moon-overlay);
		--color-muted: var(--color-moon-muted);
		--color-subtle: var(--color-moon-subtle);
		--color-text: var(--color-moon-text);
		--color-love: var(--color-moon-love);
		--color-gold: var(--color-moon-gold);
		--color-rose: var(--color-moon-rose);
		--color-pine: var(--color-moon-pine);
		--color-foam: var(--color-moon-foam);
		--color-iris: var(--color-moon-iris);
	}

	&[data-theme="dawn"] {
		color-scheme: light;

		--color-base: var(--color-dawn-base);
		--color-surface: var(--color-dawn-surface);
		--color-overlay: var(--color-dawn-overlay);
		--color-muted: var(--color-dawn-muted);
		--color-subtle: var(--color-dawn-subtle);
		--color-text: var(--color-dawn-text);
		--color-love: var(--color-dawn-love);
		--color-gold: var(--color-dawn-gold);
		--color-rose: var(--color-dawn-rose);
		--color-pine: var(--color-dawn-pine);
		--color-foam: var(--color-dawn-foam);
		--color-iris: var(--color-dawn-iris);
	}
}

::selection {
	color: var(--color-text);
	background: --alpha(var(--color-muted) / 0.2);
}

html {
	color: var(--color-text);
	background: var(--color-base);
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

html,
body {
	/* Prevent decorative elements overflowing. */
	overflow-x: hidden;
}

/* 
 * Encourage adding role="list" to remove list styles while retaining semantics
 * in Safari/VoiceOver. Styles are removed for scenarios implicitly supported
 * by Safari.
 *
 * Reference: https://www.scottohara.me/blog/2019/01/12/lists-and-safari.html
 */
ol {
	list-style-type: decimal;
}
ul {
	list-style-type: disc;
}
nav ol,
nav li,
ol[role="list"],
ul[role="list"] {
	list-style-type: none;
}

.link {
	color: var(--color-iris);
	text-decoration-color: --alpha(var(--color-iris) / 0.4);
	text-decoration-line: underline;
	text-underline-offset: 2px;
}

.wrapper {
	margin-inline: auto;
	padding-inline: var(--spacing-page-gutter);
	max-inline-size: var(--breakpoint-wrapper);
}

.animate-enter {
	opacity: 0;
	animation: enter 500ms forwards;
	animation-delay: calc(var(--stagger) * 200ms);

	@media (prefers-reduced-motion: reduce) {
		animation-delay: -1ms !important;
		animation-duration: 1ms !important;
	}
}

/* prettier-ignore */
@utility tonal-* {
	color: --value(--color-*);
	background-color: --alpha(--value(--color-*) / 10%);
	border-color: --alpha(--value(--color-*) / 20%);
}

/* prettier-ignore */
@utility tonal-pressed-* {
		color: --value(--color-*);
		background-color: --alpha(--value(--color-*) / 20%);
		border-color: --alpha(--value(--color-*) / 30%);
}

@keyframes enter {
	0% {
		opacity: 0;
		transform: translateY(10px);
	}

	100% {
		opacity: 1;
		transform: none;
	}
}

